+ : new feature
- : deprecated feature
* : bugfix or changed code
Bug numbers are references to bugs in http://www.achievo.org/bugzilla
[names] are references to people in the AUTHORS file.
Please do not exceed 80 characters per line.
Latest changes go on top, different types of changes may be mixed.

Changes in ATK 6.3
------------------
+ Added initialvalue support to atkshuttlerelation. [Melvin]
* Do not force template compilation in the frontcontroller. [Tjeerd]
* Fixed column length support for the decimal, double and float types in the
  mysql driver. [Mvdvelden]
* Fixed the missing getDbStatus method in atkDb. [Mvdvelden]
* Fixed bug which caused the first field always to be selected after
  depended attribute refresh. [Peter]
* Fixed atkManyToManyRelation clean-up of old selected records. [Peter]
+ Added the possibility to add regex exclude patterns to atkDirectoryTraverser
  and used this feature in atkThemeCompiler. [Patrick]
* Changed the tbsooo interface to be more compatible with odt file generation
  when using the zip extension. [mvdvelden]
+ Added ability to set a different template for the tooltip for each record
  in an atkExtendableShuttleRelation. [Dennis]
* Improved support for more complex selectors in atkDataNode::getCriteria()
  [Peter, Dennis]
+ When using the configuration option "mail_redirect" in atkMailer, prefix
  the mail body to show the original recipients [Patrick]
* In atkQuery, the join condition in addJoin is moved from the where clause
  to the join clause where it belongs. [Patrick]
* Fixed forgetCriteria() and saveCriteria() from abstractsearchhandler,
  when we use transact sql db. [Yury]
* Attribute values from the request will be used by initial_values. [Peter]
+ Added atkOneToManyRelation::setUseRefKeyForFilter which can be used
  to disable the usage of the ref key as filter for the grid. This allows
  you to use a atkOneToManyRelations inside a node which has no direct